# transparent-agent

./: .gitignore  README.md  my_research_data.json  my_research_data.md  package-lock.json  try.py
backend/: .env.example  SKILLS_SNAPSHOT.md  app.py  benchmark_embedding.py  config.py  pyproject.toml
backend/api/: __init__.py  chat.py  rag_api.py  sessions.py  tokens.py  web_content.py
backend/graph/: __init__.py  agent.py
backend/memory/: search_results_manager.py  session_context.py  session_manager.py
backend/prompt/: __init__.py  build_default_prompt.py  prompt_builder.py  query_processing.py
backend/proxy/: __init__.py  base_proxy.py  free_proxy_provider.py  types.py
backend/retrievers/: __init__.py  retriever.py  utils.py
backend/retrievers/arxiv/: arxiv.py
backend/retrievers/custom/: custom.py
backend/retrievers/duckduckgo/: duckduckgo.py
backend/retrievers/searx/: searx.py
backend/retrievers/tavily/: tavily_search.py
backend/scraper/: __init__.py  cookie_manager.py  scraper.py  utils.py
backend/scraper/arxiv/: arxiv.py
backend/scraper/beautiful_soup/: beautiful_soup.py
backend/scraper/browser/: browser_launcher.py  cdp_scraper.py  nodriver_scraper.py
backend/scraper/pymupdf/: pymupdf.py
backend/skills/web-search/: SKILL.md
backend/tools/: __init__.py  captcha_solver.py  crawler_util.py  easing.py  get_full_information_tool.py  rag_tool.py  web_search_refined_tool.py  web_search_tool.py
backend/utils/: compression.py  knowledge_file_db.py  rate_limiter.py  reranker.py  web_cache_db.py  workers.py
frontend/: package-lock.json  (+2 more)
(+14 files in other folders)
